# q2-shared-asv

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  shared_asv.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test-and-lint.yml
environment-files/: q2-shared-asv-qiime2-amplicon-dev.yml  q2-shared-asv-qiime2-amplicon-release.yml
examples/: make_demo_biom.py  run_demo.sh
examples/data/: sample_metadata.tsv  sample_metadata_skin_only.tsv  sample_shared_asv.tsv
q2_shared_asv/: __init__.py  compute.py  plugin_setup.py
tests/: test_compute.py
