[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q2-shared-asv"
version = "0.2.0"
description = "A QIIME 2 plugin for shared ASV analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Ryo NIWA", email = "ryo.niwa@cira.kyoto-u.ac.jp" }
]
requires-python = ">=3.8"
dependencies = [
  "qiime2",
]

[project.urls]
Homepage = "https://github.com/biota-inc/q2-shared-asv"

# -------------------------------------------------------------------
# Entry-points (equivalent to entry_points=… in setup.py)
# -------------------------------------------------------------------
[project.entry-points."qiime2.plugins"]
q2-shared-asv = "q2_shared_asv.plugin_setup:plugin"

# -------------------------------------------------------------------
# setuptools-specific options
# -------------------------------------------------------------------
[tool.setuptools]
packages = ["q2_shared_asv"]
include-package-data = true

[tool.setuptools.package-data]
"q2_shared_asv" = ["*"]
